--- a/ouderavond project/Homepagina.html
+++ b/ouderavond project/Homepagina.html
@@ -17,10 +17,16 @@
         <ul>
           <li><a id="linkjes nav" href="#">Over mij</a></li>
           <li><a id="linkjes nav" href="#">Homepage</a></li>
-          <li><a id="linkjes nav" href="#"> </a></li>
-          <li><a id="linkjes nav" href="#"></a></li>
+          <li><a id="linkjes nav" href="#">canvas</a></li>
+          <li><a id="linkjes nav" href="#">Locatie gids</a></li>
+          <li><a id="linkjes nav" href="#">software</a></li>
+          <li><a id="linkjes nav" href="#">Examen</a></li>
+          <li><a id="linkjes nav" href="#">achtergrond informatie</a></li>
+          <li><a id="linkjes nav" href="#">OPleidingwijzer</a></li>
         </ul>
       </nav>
+
+     
 
     
 
@@ -38,7 +44,6 @@
         informatie</h2> 
  <h2>Eduarte</h2> 
  <h2>Opleidingswijzer</h2> 
- <h2>Over Opleidingswijzer</h2> 
  <h2>BSA</h2> 
  <h2>Datum 
   oudergesprekken</h2> 
