--- a/ouderavond project/Homepagina.html
+++ b/ouderavond project/Homepagina.html
@@ -32,7 +32,7 @@
 
 
 
-  <H4>Welkom op za wesite van Joaquim & Himasnshu</H4>
+  <H4>Welkom op za wesite van Joaquim & Himasnshu jaoquim is to hot to handle </H4>
         
   <style>
     h4 {text-align: center;}
