--- a/ouderavond project/Homepagina.html
+++ b/ouderavond project/Homepagina.html
@@ -12,21 +12,42 @@
  
     <div class="center">
         <h1>Ouderavond</h1>
-
         
-    </div>
-    <nav>
-        <ul>
-          <li><a id="linkjes nav" href="#">canvas</a></li>
-          <li><a id="linkjes nav" href="#">Opleidingswijzer</a></li>
-          <li><a id="linkjes nav" href="#">Locatiegids</a></li>
-          <li><a id="linkjes nav" href="#">Examenplan</a></li>
-          <li><a id="linkjes nav" href="#">Ouderavonden</a></li>
-          <li><a id="linkjes nav" href="#">BSA</a></li>
-          <li><a id="linkjes nav" href="#">Achtergrond informatie</a></li>
-          <li><a id="linkjes nav" href="#">Over ons</a></li>
-        </ul>
+       <nav>
+        <div class="navbar">
+          <a href="#home">Canvas</a>
+          <div class="subnav">
+            <div class="subnav-content">
+              <a href="#company">Company</a>
+              <a href="#team">Team</a>
+              <a href="#careers">Careers</a>
+            </div>
+          </div>
+          <div class="subnav">
+            <button class="subnavbtn">Opleidingswijzer<i class="fa fa-caret-down"></i></button>
+            <div class="subnav-content">  
+              <a href="#bring">Bring</a>
+              <a href=  "#deliver">Deliver</a>
+              <a href="#package">Package</a>
+              <a href="#express">Express</a>
+            </div>
+          </div>
+       <div class="subnav">
+            <button class="subnavbtn">Locatiegids<i class="fa fa-caret-down"></i></button>
+            <div class="subnav-content">
+              <a href="#link1">Link 1</a>
+              <a href="#link2">Link 2</a>
+              <a href="#link3">Link 3</a>
+              <a href="#link4">Link 4</a>
+            </div>
+          </div>
+          <a href="#contact">Examenplan</a>
+        </div>
       </nav>
+        
+
+    </div>
+  
       <br><br><br><br><br><br><br><br><br><br><br><br><br> 
   <img src="images/image 2.png" alt="TCR"  class="center">
 
