alles staat nu in css

--- a/ouderavond project/achtergrondinfo.html
+++ b/ouderavond project/achtergrondinfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="aopmaak.css">
+    <link rel="stylesheet" href="OpmaakO.css">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
     </div>
     
     <br>
-    <div class="center">
+    <div class="achtergrondinfop">
     <p> 1. <br><br><br>
      2.<br><br><br>
      3.<br><br><br>
