--- a/ouderavond project/achtergrondinfo.html
+++ b/ouderavond project/achtergrondinfo.html
@@ -12,12 +12,12 @@
         <div class="image">
     </div>
     
-    <div class="center">
+    <div class="agicenter">
     <h1>achtergrond informatie studenten</h1>
     </div>
     
     <br>
-    <div class="achtergrondinfop">
+    <div class="agip">
     <p> 1. <br><br><br>
      2.<br><br><br>
      3.<br><br><br>
