--- a/ouderavond project/canvas.html
+++ b/ouderavond project/canvas.html
@@ -17,24 +17,19 @@
 <div class="canvascenter">
 <h1>canvas</h1>
 </div>
+    
+</body>
+<br><br><br><br>
 
-<br>
+<body class="canvasbody">
 
+    <div class="canvascolumn">
+        <div class="canvastext-box">Tekstblok 1</div>
+        <div class="canvastext-box">Tekstblok 2</div>
+        <div class="canvastext-box">Tekstblok 3</div>
+        <div class="canvastext-box">Tekstblok 4</div>
+    </div>
 
-<div class="container">
-    <div class="canvastekstblok">
-<p>tekst</p>
-</div>
-<div class="canvastekstblok">
-<p>tekst</p>
-</div>
-<div class="canvastekstblok">
-<p>tekst</p>
-</div>
- <div class="canvastekstblok">
-<p>tekst</p>
-</div>
-</div>
 
 </body>
 </html>
