--- a/ouderavond project/Homepagina.html
+++ b/ouderavond project/Homepagina.html
@@ -5,13 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ouderavond</title>
     <link rel="stylesheet" href="OpmaakO.css">
-    
-    <style>
-        /* Add your CSS styles for the navigation bar here */
-    </style>
 </head>
 <body>
-    <div id="center">
+    <div id="HMcenter">
         <nav>
             <div class="navbar">
                 <a href="canvas.html">Canvas</a>               
@@ -45,16 +41,18 @@
 
 <h4>welkom op de website van Himanshu en Joaquim </h4>  
 
-<div id="footer">
-  <p>creators Himanshu & Joaquim<br>
+
+
     
   
-</div>
+
 <div>
   <img class="MBIMG" src="images/image 2.png" alt="Centered Image">
 </div>
+<footer>
+  <p>creators Himanshu & Joaquim<br>
+</footer>
 </body>
 </html>
 
 
-  
