bla bla bla bl alb bal

--- a/ouderavond project/Locatiegids.html
+++ b/ouderavond project/Locatiegids.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="OpmaakO.css">
 </head>
 <body>
+    <div id="HMcenter">
+        <nav>
+            <div class="navbar">
+                <a href="canvas.html">Canvas</a>               
+            </div>
+            <div class="navbar">
+              <a href="canvas.html">Begeleiding</a>               
+          </div>
+          <div class="navbar">
+            <a href="Locatiegids.html">Locatiegids</a>               
+        </div>
+        <div class="navbar">
+          <a href="canvas.html">Examenplan</a>               
+      </div>
+      <div class="navbar">
+        <a href="canvas.html">Ouderavonden</a>               
+    </div>
+    <div class="navbar">
+      <a href="canvas.html">BSA</a>               
+  </div>
+  <div class="navbar">
+    <a href="achtergrondinfo.html">Achtergrondinformatie</a>               
+</div>
+<div class="navbar">
+  <a href="overons.html">Over ons</a> 
+</div>
+
+
+
+
+
 
 </body>
 </html>
