--- a/ouderavond project/Homepagina.html
+++ b/ouderavond project/Homepagina.html
@@ -9,14 +9,14 @@
 <body>
     <div id="HMcenter">
         <nav>
-            <div class="navbar">
+            <div class="navbar">  
                 <a href="canvas.html">Canvas</a>               
             </div>
             <div class="navbar">
               <a href="canvas.html">Begeleiding</a>               
           </div>
           <div class="navbar">
-            <a href="canvas.html">Locatiegids</a>               
+            <a href="Locatiegids.html">Locatiegids</a>               
         </div>
         <div class="navbar">
           <a href="canvas.html">Examenplan</a>               
@@ -28,10 +28,10 @@
       <a href="canvas.html">BSA</a>               
   </div>
   <div class="navbar">
-    <a href="canvas.html">Achtergrondinformatie</a>               
+    <a href="achtergrondinfo.html">Achtergrondinformatie</a>               
 </div>
 <div class="navbar">
-  <a href="canvas.html">Over ons</a>    
+  <a href="overons.html">Over ons</a>    
 
 </div>
         </nav>
