--- a/ouderavond project/achtergrondinfo.html
+++ b/ouderavond project/achtergrondinfo.html
@@ -7,13 +7,35 @@
     <link rel="stylesheet" href="OpmaakO.css">
 </head>
 <body>
-
-    <div class="container">
-        <div class="image">
+    <div id="HMcenter">
+        <nav>
+            <div class="navbar">
+                <a href="canvas.html">Canvas</a>               
+            </div>
+            <div class="navbar">
+              <a href="canvas.html">Begeleiding</a>               
+          </div>
+          <div class="navbar">
+            <a href="canvas.html">Locatiegids</a>               
+        </div>
+        <div class="navbar">
+          <a href="canvas.html">Examenplan</a>               
+      </div>
+      <div class="navbar">
+        <a href="canvas.html">Ouderavonden</a>               
     </div>
-    
-    <div class="agicenter">
-    <h1>achtergrond informatie studenten</h1>
+    <div class="navbar">
+      <a href="canvas.html">BSA</a>               
+  </div>
+  <div class="navbar">
+    <a href="canvas.html">Achtergrondinformatie</a>               
+</div>
+<div class="navbar">
+  <a href="canvas.html">Over ons</a>    
+
+</div>
+        </nav>
+        <h1>achtergrondinformatie</h1>
     </div>
     
     <br>
