--- a/ouderavond project/canvas.html
+++ b/ouderavond project/canvas.html
@@ -10,12 +10,39 @@
 </head>
 <body>
 
-
-
-<div class="canvascenter">
-<h1>canvas</h1>
+    <div id="HMcenter">
+        <nav>
+            <div class="navbar">
+                <a href="canvas.html">Canvas</a>               
+            </div>
+            <div class="navbar">
+              <a href="canvas.html">Begeleiding</a>               
+          </div>
+          <div class="navbar">
+            <a href="canvas.html">Locatiegids</a>               
+        </div>
+        <div class="navbar">
+          <a href="canvas.html">Examenplan</a>               
+      </div>
+      <div class="navbar">
+        <a href="canvas.html">Ouderavonden</a>               
+    </div>
+    <div class="navbar">
+      <a href="canvas.html">BSA</a>               
+  </div>
+  <div class="navbar">
+    <a href="canvas.html">Achtergrondinformatie</a>               
 </div>
+<div class="navbar">
+  <a href="canvas.html">Over ons</a>    
+
+</div>
+        </nav>
+        <h1>canvas</h1>
+    </div>
     
+
+
 </body>
 <br><br><br><br>
 
