--- a/ouderavond project/overons.html
+++ b/ouderavond project/overons.html
@@ -11,19 +11,36 @@
 <body>
 
     
-<div class="container">
-    <div class="image">
+    <div id="HMcenter">
+        <nav>
+            <div class="navbar">  
+                <a href="canvas.html">Canvas</a>               
+            </div>
+            <div class="navbar">
+              <a href="begeleiding.html">Begeleiding</a>               
+          </div>
+          <div class="navbar">
+            <a href="Locatiegids.html">Locatiegids</a>               
+        </div>
+        <div class="navbar">
+          <a href="examenplan.html">Examenplan</a>               
+      </div>
+      <div class="navbar">
+        <a href="ouderavonden.html">Ouderavonden</a>               
+    </div>
+    <div class="navbar">
+      <a href="BSA.html">BSA</a>               
+  </div>
+  <div class="navbar">
+    <a href="achtergrondinfo.html">Achtergrondinformatie</a>               
 </div>
-
-
-
-    
-
-
-
-<div class="center">
-<h1>over ons</h1>
+<div class="navbar">
+  <a href="overons.html">Over ons</a>   
 </div>
+        </nav>
+        <h1>over ons</h1>
+    </div>
+
 
 <br>
 <div class="center">
