--- a/ouderavond project/Locatiegids.html
+++ b/ouderavond project/Locatiegids.html
@@ -7,33 +7,33 @@
     <link rel="stylesheet" href="OpmaakO.css">
 </head>
 <body>
-    <div id="HMcenter">
-        <nav>
-            <div class="navbar">
-                <a href="canvas.html">Canvas</a>               
-            </div>
-            <div class="navbar">
-              <a href="canvas.html">Begeleiding</a>               
-          </div>
-          <div class="navbar">
-            <a href="Locatiegids.html">Locatiegids</a>               
+  <div id="HMcenter">
+    <nav>
+        <div class="navbar">  
+            <a href="canvas.html">Canvas</a>               
         </div>
         <div class="navbar">
-          <a href="canvas.html">Examenplan</a>               
+          <a href="begeleiding.html">Begeleiding</a>               
       </div>
       <div class="navbar">
-        <a href="canvas.html">Ouderavonden</a>               
+        <a href="Locatiegids.html">Locatiegids</a>               
     </div>
     <div class="navbar">
-      <a href="canvas.html">BSA</a>               
+      <a href="examenplan.html">Examenplan</a>               
   </div>
   <div class="navbar">
-    <a href="achtergrondinfo.html">Achtergrondinformatie</a>               
+    <a href="ouderavonden.html">Ouderavonden</a>               
 </div>
 <div class="navbar">
-  <a href="overons.html">Over ons</a> 
+  <a href="BSA.html">BSA</a>               
 </div>
-
+<div class="navbar">
+<a href="achtergrondinfo.html">Achtergrondinformatie</a>               
+</div>
+<div class="navbar">
+<a href="overons.html">Over ons</a>   
+</div>
+</nav>
 
 
 
