--- a/ouderavond project/achtergrondinfo.html
+++ b/ouderavond project/achtergrondinfo.html
@@ -9,29 +9,29 @@
 <body>
     <div id="HMcenter">
         <nav>
-            <div class="navbar">
+            <div class="navbar">  
                 <a href="canvas.html">Canvas</a>               
             </div>
             <div class="navbar">
-              <a href="canvas.html">Begeleiding</a>               
+              <a href="begeleiding.html">Begeleiding</a>               
           </div>
           <div class="navbar">
-            <a href="canvas.html">Locatiegids</a>               
+            <a href="Locatiegids.html">Locatiegids</a>               
         </div>
         <div class="navbar">
-          <a href="canvas.html">Examenplan</a>               
+          <a href="examenplan.html">Examenplan</a>               
       </div>
       <div class="navbar">
-        <a href="canvas.html">Ouderavonden</a>               
+        <a href="ouderavonden.html">Ouderavonden</a>               
     </div>
     <div class="navbar">
-      <a href="canvas.html">BSA</a>               
+      <a href="BSA.html">BSA</a>               
   </div>
   <div class="navbar">
-    <a href="canvas.html">Achtergrondinformatie</a>               
+    <a href="achtergrondinfo.html">Achtergrondinformatie</a>               
 </div>
 <div class="navbar">
-  <a href="canvas.html">Over ons</a>    
+  <a href="overons.html">Over ons</a>   
 
 </div>
         </nav>
