--- a/ouderavond project/Homepagina.html
+++ b/ouderavond project/Homepagina.html
@@ -9,6 +9,9 @@
 <body>
     <div id="HMcenter">
         <nav>
+          <div class="navbar">  
+            <a href="Homepagina.html">Homepagina</a>               
+        </div>
             <div class="navbar">  
                 <a href="canvas.html">Canvas</a>               
             </div>
@@ -31,7 +34,7 @@
     <a href="achtergrondinfo.html">Achtergrondinformatie</a>               
 </div>
 <div class="navbar">
-  <a href="overons.html">Over ons</a>    
+  <a href="overons.html">Over ons</a>  
 
 </div>
         </nav>
