--- a/ouderavond project/Locatiegids.html
+++ b/ouderavond project/Locatiegids.html
@@ -9,6 +9,9 @@
 <body>
     <div id="HMcenter">
         <nav>
+          <div class="navbar">  
+            <a href="Homepagina.html">Homepagina</a>               
+        </div>
             <div class="navbar">
                 <a href="canvas.html">Canvas</a>               
             </div>
