--- a/ouderavond project/Homepagina.html
+++ b/ouderavond project/Homepagina.html
@@ -11,6 +11,9 @@
           
   <div id="HMcenter">
     <nav>
+      <div class="navbar">  
+        <a href="Homepagina.html">homepagina</a>               
+    </div>
         <div class="navbar">  
             <a href="canvas.html">Canvas</a>               
         </div>
@@ -24,7 +27,6 @@
     <a href="ouderavonden.html">Ouderavonden</a>
 </div>
 <div class="navbar">
-  <a href="overons.html">Over ons</a>
   <a href="BSA.html">BSA</a>
 </div>
 <div class="navbar">
