--- a/ouderavond project/canvas.html
+++ b/ouderavond project/canvas.html
@@ -11,6 +11,9 @@
     <div id="HMcenter">
         <nav>
             <div class="navbar">  
+                <a href="Homepagina.html">homepagina</a>               
+            </div>
+            <div class="navbar">  
                 <a href="canvas.html">Canvas</a>               
             </div>
           <div class="navbar">
