--- a/ouderavond project/overons.html
+++ b/ouderavond project/overons.html
@@ -13,6 +13,9 @@
     
     <div id="HMcenter">
         <nav>
+          <div class="navbar">  
+            <a href="Homepagina.html">homepagina</a>               
+        </div>
             <div class="navbar">  
                 <a href="canvas.html">Canvas</a>               
             </div>
