--- a/ouderavond project/Homepagina.html
+++ b/ouderavond project/Homepagina.html
@@ -9,33 +9,33 @@
 <body>
 
           
-  <div id="HMcenter">
-    <nav>
-      <div class="navbar">  
-        <a href="Homepagina.html">homepagina</a>               
-    </div>
-        <div class="navbar">  
-            <a href="canvas.html">Canvas</a>               
-        </div>
-      <div class="navbar">
-        <a href="Locatiegids.html">Locatiegids</a>
-    </div>
-    <div class="navbar">
-      <a href="examenplan.html">Examenplan</a>
-  </div>
-  <div class="navbar">
-    <a href="ouderavonden.html">Ouderavonden</a>
+<div id="HMcenter">
+<nav>
+<div class="navbar">  
+<a href="Homepagina.html">homepagina</a>               
+</div>
+<div class="navbar">  
+<a href="canvas.html">Canvas</a>               
 </div>
 <div class="navbar">
-  <a href="BSA.html">BSA</a>
+<a href="Locatiegids.html">Locatiegids</a>
+</div>
+<div class="navbar">
+<a href="examenplan.html">Examenplan</a>
+</div>
+<div class="navbar">
+<a href="Oudereavond.html">Ouderavonden</a>
+</div>
+<div class="navbar">
+<a href="BSA.html">BSA</a>
 </div>
 <div class="navbar">
 <a href="achtergrondinfo.html">Achtergrondinformatie</a>
 </div>
 <div class="navbar">
 <a href="overons.html">Over ons</a>
-
 </div>
+
         </nav>
         <h1>Ouderavond</h1>
     </div>
