--- a/ouderavond project/Locatiegids.html
+++ b/ouderavond project/Locatiegids.html
@@ -7,43 +7,44 @@
     <link rel="stylesheet" href="OpmaakO.css">
 </head>
 <body>
-    <div id="HMcenter">
-        <nav>
-          <div class="navbar">  
-            <a href="Homepagina.html">Homepagina</a>               
-        </div>
-            <div class="navbar">
-                <a href="canvas.html">Canvas</a>               
-            </div>
-            <div class="navbar">
-              <a href="canvas.html">Begeleiding</a>               
-          </div>
-          <div class="navbar">
-            <a href="Locatiegids.html">Locatiegids</a>               
+  
   <div id="HMcenter">
     <nav>
-        <div class="navbar">  
-            <a href="canvas.html">Canvas</a>               
-        </div>
-      <div class="navbar">
-        <a href="Locatiegids.html">Locatiegids</a>               
+    <div class="navbar">  
+    <a href="Homepagina.html">homepagina</a>               
+    </div>
+    <div class="navbar">  
+    <a href="canvas.html">Canvas</a>               
     </div>
     <div class="navbar">
-      <a href="examenplan.html">Examenplan</a>               
+    <a href="Locatiegids.html">Locatiegids</a>
+    </div>
+    <div class="navbar">
+    <a href="examenplan.html">Examenplan</a>
+    </div>
+    <div class="navbar">
+    <a href="Oudereavond.html">Ouderavonden</a>
+    </div>
+    <div class="navbar">
+    <a href="BSA.html">BSA</a>
+    </div>
+    <div class="navbar">
+    <a href="achtergrondinfo.html">Achtergrondinformatie</a>
+    </div>
+    <div class="navbar">
+    <a href="overons.html">Over ons</a>
+    </nav>
+    </div>
+
+    
+    <div class="center-video">
+      <iframe width="640" height="360" src="https://www.youtube.com/watch?v=-i58tPY9CmA" frameborder="0" allowfullscreen></iframe>
   </div>
-  <div class="navbar">
-    <a href="ouderavonden.html">Ouderavonden</a>               
-</div>
-<div class="navbar">
-  <a href="BSA.html">BSA</a>               
-</div>
-<div class="navbar">
-<a href="achtergrondinfo.html">Achtergrondinformatie</a>               
-</div>
-<div class="navbar">
-<a href="overons.html">Over ons</a>   
-</div>
-</nav>
+
+
+
+          
+
 
 
 
