--- a/ouderavond project/canvas.html
+++ b/ouderavond project/canvas.html
@@ -10,30 +10,30 @@
 <body>
     <div id="HMcenter">
         <nav>
-            <div class="navbar">  
-                <a href="Homepagina.html">homepagina</a>               
-            </div>
-            <div class="navbar">  
-                <a href="canvas.html">Canvas</a>               
-            </div>
-          <div class="navbar">
-            <a href="Locatiegids.html">Locatiegids</a>               
+        <div class="navbar">  
+        <a href="Homepagina.html">homepagina</a>               
+        </div>
+        <div class="navbar">  
+        <a href="canvas.html">Canvas</a>               
         </div>
         <div class="navbar">
-          <a href="examenplan.html">Examenplan</a>               
-      </div>
-      <div class="navbar">
-        <a href="ouderavonden.html">Ouderavonden</a>               
-    </div>
-    <div class="navbar">
-      <a href="BSA.html">BSA</a>               
-  </div>
-  <div class="navbar">
-    <a href="achtergrondinfo.html">Achtergrondinformatie</a>               
-</div>
-<div class="navbar">
-  <a href="overons.html">Over ons</a>    
-
+        <a href="Locatiegids.html">Locatiegids</a>
+        </div>
+        <div class="navbar">
+        <a href="examenplan.html">Examenplan</a>
+        </div>
+        <div class="navbar">
+        <a href="Oudereavond.html">Ouderavonden</a>
+        </div>
+        <div class="navbar">
+        <a href="BSA.html">BSA</a>
+        </div>
+        <div class="navbar">
+        <a href="achtergrondinfo.html">Achtergrondinformatie</a>
+        </div>
+        <div class="navbar">
+        <a href="overons.html">Over ons</a>
+        </div>
 </div>
         </nav>
         <h1>canvas</h1>
@@ -53,6 +53,6 @@
         <div class="canvastext-box">Tekstblok 4</div>
     </div>
 
-
 </body>
+
 </html>
