--- a/ouderavond project/examenplan.html
+++ b/ouderavond project/examenplan.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="OpmaakO.css">
 </head>
 <body>
     
+    <div id="HMcenter">
+        <nav>
+        <div class="navbar">  
+        <a href="Homepagina.html">homepagina</a>               
+        </div>
+        <div class="navbar">  
+        <a href="canvas.html">Canvas</a>               
+        </div>
+        <div class="navbar">
+        <a href="Locatiegids.html">Locatiegids</a>
+        </div>
+        <div class="navbar">
+        <a href="examenplan.html">Examenplan</a>
+        </div>
+        <div class="navbar">
+        <a href="Oudereavond.html">Ouderavonden</a>
+        </div>
+        <div class="navbar">
+        <a href="BSA.html">BSA</a>
+        </div>
+        <div class="navbar">
+        <a href="achtergrondinfo.html">Achtergrondinformatie</a>
+        </div>
+        <div class="navbar">
+        <a href="overons.html">Over ons</a>
+        </div>
+
+
+
+
 </body>
 </html>
