--- a/ouderavond project/overons.html
+++ b/ouderavond project/overons.html
@@ -4,42 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="OpmaakO.css">
-
-
 </head>
 <body>
-
+  <link rel="stylesheet" href="OpmaakO.css">
     
-    <div id="HMcenter">
-        <nav>
-          <div class="navbar">  
-            <a href="Homepagina.html">homepagina</a>               
-        </div>
-            <div class="navbar">  
-                <a href="canvas.html">Canvas</a>               
-            </div>
-          <div class="navbar">
-            <a href="Locatiegids.html">Locatiegids</a>               
-        </div>
-        <div class="navbar">
-          <a href="examenplan.html">Examenplan</a>               
-      </div>
-      <div class="navbar">
-        <a href="ouderavonden.html">Ouderavonden</a>               
+  <div id="HMcenter">
+    <nav>
+    <div class="navbar">  
+    <a href="Homepagina.html">homepagina</a>               
+    </div>
+    <div class="navbar">  
+    <a href="canvas.html">Canvas</a>               
     </div>
     <div class="navbar">
-      <a href="BSA.html">BSA</a>               
-  </div>
-  <div class="navbar">
-    <a href="achtergrondinfo.html">Achtergrondinformatie</a>               
-</div>
-<div class="navbar">
-  <a href="overons.html">Over ons</a>   
-</div>
-        </nav>
-        <h1>over ons</h1>
+    <a href="Locatiegids.html">Locatiegids</a>
     </div>
+    <div class="navbar">
+    <a href="examenplan.html">Examenplan</a>
+    </div>
+    <div class="navbar">
+    <a href="Oudereavond.html">Ouderavonden</a>
+    </div>
+    <div class="navbar">
+    <a href="BSA.html">BSA</a>
+    </div>
+    <div class="navbar">
+    <a href="achtergrondinfo.html">Achtergrondinformatie</a>
+    </div>
+
+    
+    <div class="navbar">
+    <a href="overons.html">Over ons</a>
+    </div>
+
 
 
 <br>
