--- a/ouderavond project/canvas.html
+++ b/ouderavond project/canvas.html
@@ -48,7 +48,7 @@
 
     <div class="canvascolumn">
         <div class="canvastext-box">Tekstblok 1</div>
-        <div class="canvastext-box">Tekstblok 2</div>
+        <div class="canvastext-box">in de kalender van canvas kan je zien wanneer je welke opdracht moet inlever of wanneer je een toets hebt</div>
         <div class="canvastext-box">Tekstblok 3</div>
         <div class="canvastext-box">Tekstblok 4</div>
     </div>
