--- a/ouderavond project/Locatiegids.html
+++ b/ouderavond project/Locatiegids.html
@@ -38,7 +38,7 @@
 
     
     <div class="center-video">
-      <iframe width="640" height="360" src="https://www.youtube.com/watch?v=-i58tPY9CmA" frameborder="0" allowfullscreen></iframe>
+      <iframe width="640" height="360" src="https://www.youtube.com/embed/-i58tPY9CmA?si=4S-A2T3iMzgfqqO0" frameborder="0" allowfullscreen></iframe>
   </div>
 
 
