--- a/ouderavond project/overons.html
+++ b/ouderavond project/overons.html
@@ -31,21 +31,49 @@
     <div class="navbar">
     <a href="achtergrondinfo.html">Achtergrondinformatie</a>
     </div>
-
-    
     <div class="navbar">
     <a href="overons.html">Over ons</a>
     </div>
-
-
+  </nav>
+<br>
+<h1>Over ons</h1>
+  <br>
+    <table>
+      <tr>
+        <th>Onderwerp</th>
+        <th>Joaquim van der Horst</th>
+        <th>Himanshu Karia</th>
+      </tr>
+      <tr>
+        <td>Leeftijd</td>
+  <td>16 jaar oud</td>
+        <td>16 jaar oud </td>
+      </tr>
+      <tr>
+        <td>Opleiding</td>
+        <td>Software developer</td>
+        <td>Software developer</td>
+      </tr>
+      <tr>
+        <td>Hobby's</td>
+        <td>Gamen en sporten</td>
+        <td>Gamen en series kijken</td>
+      </tr>
+      <tr>
+        <td>Woonplaats</td>
+        <td>Barendrecht</td>
+        <td>Spijkernisse</td>
+      </tr>
+</table> <br>
 
 <br>
-<div class="center">
-<p>1</p>
-<p>2</p>
-<p>3</p>
-<p>4</p>
+<div class="overonscolumn">
+  <div class="overonstext-box"><img id="fotojoaquim" src="./images/image0.jpg" alt="">Hallo mijn naam is Joaquim van der Horst en ik ben 16 jaar.
+     In mijn vrije tijd game ik veel en als ik genoeg vrije tijd heb om te sporten doe ik dat als ik niet vrij ben ben ik of op school of op werk. 
+     Ik kom uit Barendrecht en als opleiding doe ik software development.</div>
+  <div class="overonstext-box"></div>
 </div>
+
 
 
 
