--- a/ouderavond project/Homepagina.html
+++ b/ouderavond project/Homepagina.html
@@ -52,7 +52,7 @@
   <img class="MBIMG" src="images/image 2.png" alt="Centered Image">
 </div>
 <footer>
-  <p>creators Himanshu & Joaquim<br>
+  <p>Makers website : Himansh & Joaquim<br>
 </footer>
 </body>
 </html>
