--- a/ouderavond project/BSA.html
+++ b/ouderavond project/BSA.html
@@ -34,7 +34,7 @@
         <div class="navbar">
         <a href="overons.html">Over ons</a>
         </div>
-
-
+</nav>
+<h1>Bindend Studie Advies</h1>
 </body>
 </html>
