--- a/ouderavond project/examenplan.html
+++ b/ouderavond project/examenplan.html
@@ -34,9 +34,13 @@
         <div class="navbar">
         <a href="overons.html">Over ons</a>
         </div>
+</nav>
+<h1>Examenplan</h1>
+<br><br><br>
+<div class="Examenplan">
+    <p>jejneje</p>
 
-
-
+    </div>
 
 </body>
 </html>
