--- a/ouderavond project/overons.html
+++ b/ouderavond project/overons.html
@@ -57,12 +57,12 @@
       <tr>
         <td>Hobby's</td>
         <td>Gamen en sporten</td>
-        <td>Gamen en series kijken</td>
+        <td>Gamen,series kijken en sporten</td>
       </tr>
       <tr>
         <td>Woonplaats</td>
         <td>Barendrecht</td>
-        <td>Spijkernisse</td>
+        <td>Spijkenisse</td>
       </tr>
 </table> <br>
 
@@ -73,6 +73,8 @@
      Ik kom uit Barendrecht en als opleiding doe ik software development.</div>
   <div class="overonstext-box"></div>
 </div>
+
+
 
 
 
