--- a/ouderavond project/achtergrondinfo.html
+++ b/ouderavond project/achtergrondinfo.html
@@ -39,10 +39,8 @@
     
     <br>
     <div class="agip">
-    <p> 1. <br><br><br>
-     2.<br><br><br>
-     3.<br><br><br>
-     4.</p><br>
+    <p> Tijdens de opleiding leer je werken op basis van verschillende projecten. Binnen een project werk je samen. Natuurlijk moet je ook wel eens zelfstandig kunnen werken. Bij het ontwerpen en bouwen leer je gebruik te maken van verschillende programmeertalen, zoals HTML/CSS, PHP, JavaScript en Python.
+     </p>
     </div>
 
 </body>
