--- a/ouderavond project/Homepagina.html
+++ b/ouderavond project/Homepagina.html
@@ -12,7 +12,7 @@
 <div id="HMcenter">
 <nav>
 <div class="navbar">  
-<a href="Homepagina.html">homepagina</a>               
+<a href="Homepagina.html">Homepagina</a>               
 </div>
 <div class="navbar">  
 <a href="canvas.html">Canvas</a>               
