--- a/ouderavond project/overons.html
+++ b/ouderavond project/overons.html
@@ -11,7 +11,7 @@
   <div id="HMcenter">
     <nav>
     <div class="navbar">  
-    <a href="Homepagina.html">homepagina</a>               
+    <a href="Homepagina.html">Homepagina</a>               
     </div>
     <div class="navbar">  
     <a href="canvas.html">Canvas</a>               
