--- a/ouderavond project/examenplan.html
+++ b/ouderavond project/examenplan.html
@@ -37,8 +37,10 @@
 </nav>
 <h1>Examenplan</h1>
 <br><br><br>
-<div class="Examenplan">
-    <p>jejneje</p>
+
+        <div class="Examenplan">
+            
+         <img id="Examenplan" src="images/Screenshot 2023-10-21 205509.png" alt="" class="foto-examenplan"></div>
 
     </div>
 
