--- a/ouderavond project/Locatiegids.html
+++ b/ouderavond project/Locatiegids.html
@@ -40,7 +40,7 @@
 <h1>video over Techniek College Rotterdam</h1>
 
     <div class="center-video">
-      <iframe width="640" height="360" src="https://www.youtube.com/embed/-i58tPY9CmA?si=4S-A2T3iMzgfqqO0" frameborder="0" allowfullscreen></iframe>
+      <iframe width="640" height="360" src="https://www.youtube.com/embed/7EZN711P_OE" frameborder="0" allowfullscreen></iframe>
   </div>
 
 
