--- a/ouderavond project/Locatiegids.html
+++ b/ouderavond project/Locatiegids.html
@@ -37,7 +37,7 @@
     </div>
 
 
-<h1>video over Techniek College Rotterdam</h1>
+<h1>Video over Techniek College Rotterdam</h1>
 
     <div class="center-video">
       <iframe width="640" height="360" src="https://www.youtube.com/embed/7EZN711P_OE" frameborder="0" allowfullscreen></iframe>
