--- a/ouderavond project/overons.html
+++ b/ouderavond project/overons.html
@@ -71,7 +71,7 @@
   <div class="overonstext-box"><img id="fotojoaquim" src="./images/image0.jpg" alt="">Hallo mijn naam is Joaquim van der Horst en ik ben 16 jaar.
      In mijn vrije tijd game ik veel en als ik genoeg vrije tijd heb om te sporten doe ik dat als ik niet vrij ben ben ik of op school of op werk. 
      Ik kom uit Barendrecht en als opleiding doe ik software development.</div>
-  <div class="overonstext-box"><img id="fotohimanshu" src="./images/image0.jpg" alt="">Hallo mijn naam is Himanshu karia en ik ben 16 jaar.
+  <div class="overonstext-box"><img id="fotohimanshu" src="./images/H & Q.jpg" alt="">Hallo mijn naam is Himanshu karia en ik ben 16 jaar.
     In mijn vrije tijd kijk ik veel series of films , maar ik hou er ook van om te sporten.
     Ik kom uit spijkenisse wat een stukje reizen is en ik volg de opleiding software developer</div>
 </div>
