--- a/ouderavond project/Oudereavond.html
+++ b/ouderavond project/Oudereavond.html
@@ -38,7 +38,7 @@
 <h1>ouderavonden</h1>
 <br><br><br>
 <div class="ouderavondp">
-<p>SOD 2023 - 10 minuten gesprekken voor ouders/verzorgers (Ouderavonden): <br>
+<p>SOD 2023 - 10 Minuten gesprekken voor ouders/verzorgers (Ouderavonden): <br>
     13/11/2023 <br>
     05/02/2024 <br>
     13/05/2024 of 20/05/2024</p>
