--- a/ouderavond project/BSA.html
+++ b/ouderavond project/BSA.html
@@ -36,5 +36,41 @@
         </div>
 </nav>
 <h1>Bindend Studie Advies</h1>
+
+<div class="BSA-column">
+        
+        De studieloopbaanbegeleider voert in de periode voordat het bindend studieadvies moet worden uitgebracht
+        ten minste twee studievoortgangsgesprekken met de student, waarin onder andere de studievoortgang,
+        beroepshouding en aanwezigheid worden besproken. Van deze gesprekken wordt een verslag gemaakt.
+        Indien er sprake is van onvoldoende studievoortgang en/of onvoldoende beroepshouding (waar onvoldoende
+        aanwezigheid een onderdeel van kan zijn), krijgt de student een verbeterplan . Dit verbeterplan
+        bevat afspraken/verbeteracties die de student moet nakomen en binnen welke termijn dit moet gebeuren.<br><br> 
+        
+        Het verbeterplan wordt met de student besproken en er worden evaluatiemomenten afgesproken.
+        Indien de student niet bereid is het gesprek over het verbeterplan te voeren en/of niet op de vastgelegde
+        evaluatieafspraken verschijnt, kan dit leiden tot een beëindiging van de opleiding.
+        Indien blijkt dat de afspraken uit het verbeterplan onvoldoende zijn nagekomen, kan de onderwijsteamleider
+        een negatief bindend studieadvies uitbrengen. Indien sprake is van persoonlijke omstandigheden van een
+        student, dient de student dit zo spoedig als redelijkerwijs kan worden verlangd, dit schriftelijk te melden bij de
+        studieloopbaanbegeleider. Bij het afgeven van een negatief bindend studieadvies wordt rekening gehouden
+        met persoonlijke omstandigheden, die tijdig zijn gemeld.
+        Onder persoonlijke omstandigheden wordt verstaan:<br><br>
+
+        • Ziekte van de student;
+        • Handicap of chronische ziekte van de student;
+        • Zwangerschap en bevalling van de student;
+        • Bijzondere familieomstandigheden;
+        • Het lidmaatschap van de Studentenraad, als bedoeld in artikel 8a.1.2. WEB, en
+        • Andere persoonlijke omstandigheden, die door de school niet in de beoordeling worden betrokken, als dit leidt
+        tot een onbillijkheid.<br><br>
+
+        Het negatief bindend studieadvies wordt gemotiveerd en schriftelijk aan de student kenbaar gemaakt.
+        Na ontvangst van een negatief bindend studieadvies kan de student niet opnieuw voor die opleiding worden
+        ingeschreven. Techniek College Rotterdam spant zich, middels het begeleidingsteam, in om de student
+        gedurende een periode van 8 weken te ondersteunen en begeleiden naar een andere opleiding dan wel
+        instelling. De inschrijving kan worden beëindigd als er na een negatief bindend studieadvies geen </div>
+</div>
+
+</div>
 </body>
 </html>
