--- a/ouderavond project/overons.html
+++ b/ouderavond project/overons.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>over ons</title>
 </head>
 <body>
   <link rel="stylesheet" href="OpmaakO.css">
@@ -73,7 +73,7 @@
      Ik kom uit Barendrecht en als opleiding doe ik software development.</div>
   <div class="overonstext-box"><img id="fotohimanshu" src="./images/H & Q.jpg" alt="">Hallo mijn naam is Himanshu karia en ik ben 16 jaar.
     In mijn vrije tijd kijk ik veel series of films , maar ik hou er ook van om te sporten.
-    Ik kom uit spijkenisse wat een stukje reizen is en ik volg de opleiding software developer</div>
+    Ik kom uit spijkenisse wat een stukje reizen is en ik volg de opleiding software developer.</div>
 </div>
 
 
