--- a/ouderavond project/BSA.html
+++ b/ouderavond project/BSA.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>bindend studie advies</title>
     <link rel="stylesheet" href="OpmaakO.css">
 </head>
 <body>
