--- a/ouderavond project/overons.html
+++ b/ouderavond project/overons.html
@@ -68,7 +68,7 @@
 
 <br>
 <div class="overonscolumn">
-  <div class="overonstext-box"><img id="fotojoaquim" src="./images/image0.jpg" alt="">Hallo mijn naam is Joaquim van der Horst en ik ben 16 jaar.
+  <div class="overonstext-box"><img id="fotojoaquim" src="./images/image0.jpg" alt="">Hallo mijn naam is Joaquim van der Horst en ik ben 16 jaar oud.
      In mijn vrije tijd game ik veel en als ik genoeg vrije tijd heb om te sporten doe ik dat als ik niet vrij ben ben ik of op school of op werk. 
      Ik kom uit Barendrecht en als opleiding doe ik software development.</div>
   <div class="overonstext-box"><img id="fotohimanshu" src="./images/H & Q.jpg" alt="">Hallo mijn naam is Himanshu karia en ik ben 16 jaar.
